<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">My First App</string>
  <string name="button_send">Send</string>
  <string name="edit_message">Enter a message</string>
  <string name="title_activity_display_message">My Message</string>
  <string name="title_activity_main">MainActivity</string>

  <!-- menu resources -->
  <string name="action_search">Search</string>
  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>
  <string name="action_help">Help</string>
  <string name="action_logout">Logout</string>

  <!-- dialog resources -->
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="about_dialog_title">About *My First App*</string>
  <string name="about_dialog_message">V1.0\nBuild xxx-xxx-xxx\nJan 2014\n(c) Roland Tritsch</string>
</resources>
