<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <!-- Search, should appear as action button -->
  <item
      android:id="@+id/action_search"
      android:icon="@drawable/ic_action_search"
      android:title="@string/action_search"
      android:showAsAction="ifRoom"
      />
  <!-- Settings, should always be in the overflow -->
  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:showAsAction="never"
      />
  <item
      android:id="@+id/action_help"
      android:title="@string/action_help"
      android:showAsAction="never"
      />
  <item
      android:id="@+id/action_about"
      android:title="@string/action_about"
      android:showAsAction="never"
      />
  <item
      android:id="@+id/action_logout"
      android:title="@string/action_logout"
      android:showAsAction="never"
      />
</menu>
